# ocaml_ppx_graphql_test

./: .gitignore  SimplePpx.install  a.out  package.json  tmp.ast
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/default/: META.SimplePpx  SimplePpx.dune-package
_esy/default/: build  install  installation.json  pnp.js
_esy/default/store/b/react_rules_of_hooks_ppx-9c766780/_build/default/: SimplePpx.opam  tmp.ml  tmp.parsetree
_esy/default/store/b/react_rules_of_hooks_ppx-9c766780/_build/default/.dune/: configurator.v2
_esy/default/store/b/react_rules_of_hooks_ppx-9c766780/_build/default/manualTest/: ManualTest.re.pp.ml
_esy/default/store/b/react_rules_of_hooks_ppx-9c766780/_build/default/src/: Ppx.re.ml
manualTest/: .merlin  ManualTest.re  ModuleTest.re
ppx/: .gitignore  DerivingGqlPpx.install  README.md  package.json
ppx/_build/: .db  .digest-db  .to-delete-in-source-tree  log
ppx/esy.lock/: index.json
ppx/manualTest/: .merlin  ManualTest.re  ModuleTest.re  dune
ppx/runtime/: GraphQLppxExpr.re  GraphQLppxExpr.rei  GraphQLppxSet.re  GraphQLppxSet.txt  dune
ppx/src/: .merlin  Constants.re  GenerateData.re  Ppx.re  Ppx.rei  Ppx_test.cmi  Ppx_test.cmo  RecTypes.re  StructureData.re  dune  ppx.txt
ppx/tests/: .merlin  AliasTests.re  GqlTest.re  Module2Test.re  ModuleTest.re  RecordTests.re  RunTests.re  dune  (+4 more)
src/: .merlin  GenerateData.re  Ppx.re  Ppx_aliasTypes.re  Ppx_basicTypes.re  Ppx_moduleTypes.re  StructureData.re  Utils.re  dune  ppx.txt
test_bucklescript/: README.md  bsconfig.json  package-lock.json  package.json
(+253 files in other folders)
