opam-version: "1.2"
name: "SimplePpx"
version: "0.0.4"
build: [
  [make "build"]
]
available: [ocaml-version >= "4.04.1"]
depends: [
  "ocaml-migrate-parsetree" {build}
  "result" {build}
  "yojson" {build}
  "ppx_tools_versioned" {build}
  "dune" {build}
  "cppo" {build}
  "ppxlib" {build}
  "alcotest" {test}
]